step2-data-preparation

--- a/1_GatheringData.ipynb
+++ b/1_GatheringData.ipynb
@@ -40,7 +40,8 @@
       "cell_type": "markdown",
       "source": [
         "### Setup Project\n",
-        "\n"
+        "\n",
+        "Create workspace"
       ]
     },
     {
@@ -58,14 +59,14 @@
             }
           ],
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "39ebf47f-decf-4d1c-ee70-1affb1131ec2",
+        "outputId": "c489e698-5810-4091-ee88-b0e10213e370",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522242099369,
+          "timestamp": 1522469284539,
           "user_tz": -180,
-          "elapsed": 1944,
+          "elapsed": 1769,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -84,7 +85,7 @@
         "\n",
         "!pwd"
       ],
-      "execution_count": 27,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,18 +120,18 @@
           },
           "output_extras": [
             {
-              "item_id": 1
+              "item_id": 2
             }
           ],
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 172
         },
-        "outputId": "ce39c3cc-164b-41c4-995a-d6415d4ed12d",
+        "outputId": "60f7c8bb-5923-4a49-f289-3e41ed6c9804",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522242101377,
+          "timestamp": 1522469321644,
           "user_tz": -180,
-          "elapsed": 1461,
+          "elapsed": 36002,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -150,19 +151,20 @@
         "    \n",
         "!ls -la input/aclImdb"
       ],
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "total 1732\r\n",
-            "drwxr-xr-x 4 7297 1000   4096 Jun 26  2011 .\r\n",
-            "drwxr-xr-x 3 root root   4096 Mar 28 12:57 ..\r\n",
-            "-rw-r--r-- 1 7297 1000 903029 Jun 11  2011 imdbEr.txt\r\n",
-            "-rw-r--r-- 1 7297 1000 845980 Apr 12  2011 imdb.vocab\r\n",
-            "-rw-r--r-- 1 7297 1000   4037 Jun 26  2011 README\r\n",
-            "drwxr-xr-x 4 7297 1000   4096 Apr 12  2011 test\r\n",
-            "drwxr-xr-x 5 7297 1000   4096 Jun 26  2011 train\r\n"
+            "Downloading...\n",
+            "total 1732\n",
+            "drwxr-xr-x 4 7297 1000   4096 Jun 26  2011 .\n",
+            "drwxr-xr-x 3 root root   4096 Mar 31 04:08 ..\n",
+            "-rw-r--r-- 1 7297 1000 903029 Jun 11  2011 imdbEr.txt\n",
+            "-rw-r--r-- 1 7297 1000 845980 Apr 12  2011 imdb.vocab\n",
+            "-rw-r--r-- 1 7297 1000   4037 Jun 26  2011 README\n",
+            "drwxr-xr-x 4 7297 1000   4096 Apr 12  2011 test\n",
+            "drwxr-xr-x 5 7297 1000   4096 Jun 26  2011 train\n"
           ],
           "name": "stdout"
         }
@@ -183,14 +185,14 @@
             }
           ],
           "base_uri": "https://localhost:8080/",
-          "height": 106
+          "height": 103
         },
-        "outputId": "b2cfb0a4-8d05-4aff-a896-09236728bf5d",
+        "outputId": "f44866a3-2431-4fbc-cb64-dbe6a43f3eb0",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522242103947,
+          "timestamp": 1522469324409,
           "user_tz": -180,
-          "elapsed": 2548,
+          "elapsed": 2716,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -222,7 +224,7 @@
         "test_neg_data = extract(\"input/aclImdb/test/neg/*.txt\")\n",
         "print(\"negative reviews for test: \", len(test_neg_data))"
       ],
-      "execution_count": 29,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,14 +254,14 @@
             }
           ],
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 138
         },
-        "outputId": "89526d76-8877-431d-8922-0093ac4a8faa",
+        "outputId": "75e1d999-15cd-4215-cff0-df9233212db8",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522242104507,
+          "timestamp": 1522469324972,
           "user_tz": -180,
-          "elapsed": 541,
+          "elapsed": 525,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -271,7 +273,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Create Data frames where positive reviews marked as 1 and negative as 0.\n",
+        "# Create Data frames for positive and negative reviews\n",
         "train_pos_df = pd.DataFrame(train_pos_data)\n",
         "train_pos_df[\"feedback\"] = 'positive'\n",
         "train_neg_df = pd.DataFrame(train_neg_data)\n",
@@ -282,27 +284,38 @@
         "test_neg_df = pd.DataFrame(test_neg_data)\n",
         "test_neg_df[\"feedback\"] = 'negative'\n",
         "\n",
-        "# Combine all reviews\n",
+        "# Combine all reviews together\n",
         "reviews_df = pd.concat([train_pos_df, train_neg_df, test_pos_df, test_neg_df])\n",
         "\n",
         "print(\"Review Frame:\")\n",
         "print(reviews_df.head())"
       ],
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Review Frame:\n",
             "                                              review  feedback\n",
-            "0  I laughed so hard during this movie my face hu...  positive\n",
-            "1  Seeing as Keifer Sutherland plays my favorite ...  positive\n",
-            "2  If you enjoy Cleese & all the British 'Pythone...  positive\n",
-            "3  I really liked this movie. Of course the idea ...  positive\n",
-            "4  I have been eagerly anticipating the opening o...  positive\n"
+            "0  Luchino Visconti was light years ahead of his ...  positive\n",
+            "1  The original movie, The Odd Couple, has some w...  positive\n",
+            "2  Going into see Seven Pounds i wasn't clearly s...  positive\n",
+            "3  This little film had long been on my \"keeper\" ...  positive\n",
+            "4  Having not seen all the films released in 2002...  positive\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "f28BthGJO6GJ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Export result\n",
+        "Store data into compressed csv file with tab separator."
       ]
     },
     {
@@ -320,14 +333,14 @@
             }
           ],
           "base_uri": "https://localhost:8080/",
-          "height": 106
+          "height": 103
         },
-        "outputId": "77b2c360-57d4-4a9a-f21e-805457fe9c1d",
+        "outputId": "37291e79-2e72-4692-8379-39dbfaf7a0ce",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522242114603,
+          "timestamp": 1522469335569,
           "user_tz": -180,
-          "elapsed": 9954,
+          "elapsed": 10225,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -337,21 +350,21 @@
       },
       "cell_type": "code",
       "source": [
-        "# Export Data frame to tsv file\n",
+        "# Export Data frames to tsv file\n",
         "reviews_df.to_csv(\"input/reviews.tsv.bz2\", index=False, sep='\\t', \n",
         "                  encoding='utf-8', compression='bz2')\n",
         "!ls -la input"
       ],
-      "execution_count": 31,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "total 18932\r\n",
-            "drwxr-xr-x 3 root root     4096 Mar 28 12:57 .\r\n",
-            "drwxr-xr-x 3 root root     4096 Mar 28 12:52 ..\r\n",
+            "drwxr-xr-x 3 root root     4096 Mar 31 04:08 .\r\n",
+            "drwxr-xr-x 3 root root     4096 Mar 31 04:08 ..\r\n",
             "drwxr-xr-x 4 7297 1000     4096 Jun 26  2011 aclImdb\r\n",
-            "-rw-r--r-- 1 root root 19372046 Mar 28 13:01 reviews.tsv.bz2\r\n"
+            "-rw-r--r-- 1 root root 19372026 Mar 31 04:08 reviews.tsv.bz2\r\n"
           ],
           "name": "stdout"
         }
@@ -364,9 +377,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Downloading files to your local file system\n",
+        "### Downloading file to your local file system\n",
         "\n",
-        "It will invoke a browser download of the files to your local computer."
+        "It will invoke a browser download of the file to your local computer."
       ]
     },
     {
