modified dataset and updated explanations

--- a/1_GatheringData.ipynb
+++ b/1_GatheringData.ipynb
@@ -18,14 +18,13 @@
   "cells": [
     {
       "metadata": {
-        "id": "HI7wKvVceuKT",
+        "id": "HRrwRMzBDcVN",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
         "### NOTE:\n",
         "Basicaly this notebook prepared to use within **Google Colab**: https://colab.research.google.com/. \n",
-        "\n",
         "\n",
         "The Google Colabatory has **free Tesla K80 GPU** and already prepared to develop deep learning applications.\n",
         "\n",
@@ -40,8 +39,7 @@
       "cell_type": "markdown",
       "source": [
         "### Setup Project\n",
-        "\n",
-        "Create workspace"
+        "Create workspace and change directory."
       ]
     },
     {
@@ -53,20 +51,15 @@
             "startup": false,
             "wait_interval": 0
           },
-          "output_extras": [
-            {
-              "item_id": 1
-            }
-          ],
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c489e698-5810-4091-ee88-b0e10213e370",
+        "outputId": "852cd911-32da-4607-911b-ae9b42aad31a",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522469284539,
+          "timestamp": 1523634650370,
           "user_tz": -180,
-          "elapsed": 1769,
+          "elapsed": 1851,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -118,20 +111,15 @@
             "startup": false,
             "wait_interval": 0
           },
-          "output_extras": [
-            {
-              "item_id": 2
-            }
-          ],
           "base_uri": "https://localhost:8080/",
           "height": 172
         },
-        "outputId": "60f7c8bb-5923-4a49-f289-3e41ed6c9804",
+        "outputId": "083a7de2-c647-488a-b1ec-ed9c7fb1c5ac",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522469321644,
+          "timestamp": 1523634691269,
           "user_tz": -180,
-          "elapsed": 36002,
+          "elapsed": 35676,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -159,7 +147,7 @@
             "Downloading...\n",
             "total 1732\n",
             "drwxr-xr-x 4 7297 1000   4096 Jun 26  2011 .\n",
-            "drwxr-xr-x 3 root root   4096 Mar 31 04:08 ..\n",
+            "drwxr-xr-x 3 root root   4096 Apr 13 15:50 ..\n",
             "-rw-r--r-- 1 7297 1000 903029 Jun 11  2011 imdbEr.txt\n",
             "-rw-r--r-- 1 7297 1000 845980 Apr 12  2011 imdb.vocab\n",
             "-rw-r--r-- 1 7297 1000   4037 Jun 26  2011 README\n",
@@ -179,20 +167,15 @@
             "startup": false,
             "wait_interval": 0
           },
-          "output_extras": [
-            {
-              "item_id": 5
-            }
-          ],
           "base_uri": "https://localhost:8080/",
           "height": 103
         },
-        "outputId": "f44866a3-2431-4fbc-cb64-dbe6a43f3eb0",
+        "outputId": "f5e26582-63df-4884-c022-d3381458cf9b",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522469324409,
+          "timestamp": 1523634698859,
           "user_tz": -180,
-          "elapsed": 2716,
+          "elapsed": 2639,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -248,20 +231,15 @@
             "startup": false,
             "wait_interval": 0
           },
-          "output_extras": [
-            {
-              "item_id": 1
-            }
-          ],
           "base_uri": "https://localhost:8080/",
           "height": 138
         },
-        "outputId": "75e1d999-15cd-4215-cff0-df9233212db8",
+        "outputId": "99b5ec41-b47c-4671-b274-c005a9b9dd6d",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522469324972,
+          "timestamp": 1523634702987,
           "user_tz": -180,
-          "elapsed": 525,
+          "elapsed": 526,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -297,11 +275,11 @@
           "text": [
             "Review Frame:\n",
             "                                              review  feedback\n",
-            "0  Luchino Visconti was light years ahead of his ...  positive\n",
-            "1  The original movie, The Odd Couple, has some w...  positive\n",
-            "2  Going into see Seven Pounds i wasn't clearly s...  positive\n",
-            "3  This little film had long been on my \"keeper\" ...  positive\n",
-            "4  Having not seen all the films released in 2002...  positive\n"
+            "0  well \"Wayne's World\" is long gone and the year...  positive\n",
+            "1  This film is one of the best of all time, cert...  positive\n",
+            "2  \"The Case of the Scorpion's Tail\" has all the ...  positive\n",
+            "3  A famous orchestra conductor, Daniel Dareus, s...  positive\n",
+            "4  This is a beautiful, rich, and very well-execu...  positive\n"
           ],
           "name": "stdout"
         }
@@ -327,20 +305,15 @@
             "startup": false,
             "wait_interval": 0
           },
-          "output_extras": [
-            {
-              "item_id": 1
-            }
-          ],
           "base_uri": "https://localhost:8080/",
           "height": 103
         },
-        "outputId": "37291e79-2e72-4692-8379-39dbfaf7a0ce",
+        "outputId": "5f9a8f13-0456-48b3-c6a1-4c3671fa7dae",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1522469335569,
+          "timestamp": 1523634718441,
           "user_tz": -180,
-          "elapsed": 10225,
+          "elapsed": 10350,
           "user": {
             "displayName": "Alex Z",
             "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
@@ -361,10 +334,10 @@
           "output_type": "stream",
           "text": [
             "total 18932\r\n",
-            "drwxr-xr-x 3 root root     4096 Mar 31 04:08 .\r\n",
-            "drwxr-xr-x 3 root root     4096 Mar 31 04:08 ..\r\n",
+            "drwxr-xr-x 3 root root     4096 Apr 13 15:51 .\r\n",
+            "drwxr-xr-x 3 root root     4096 Apr 13 15:50 ..\r\n",
             "drwxr-xr-x 4 7297 1000     4096 Jun 26  2011 aclImdb\r\n",
-            "-rw-r--r-- 1 root root 19372026 Mar 31 04:08 reviews.tsv.bz2\r\n"
+            "-rw-r--r-- 1 root root 19371416 Apr 13 15:51 reviews.tsv.bz2\r\n"
           ],
           "name": "stdout"
         }
