step4-training-model-mlps

--- a/3_ChoosingModel_MLPs.ipynb
+++ b/3_ChoosingModel_MLPs.ipynb
@@ -436,8 +436,13 @@
         "\n",
         "**Tanh** - It is similar to the sigmoid function butmaps the input to values between -1 and 1.\n",
         "\n",
-        "**Rectified Linear Unit (ReLU)** - It allows only positive values to pass through it. The negative values are mapped to zero."
-      ]
+        "**Rectified Linear Unit (ReLU)** - It allows only positive values to pass through it. The negative values are mapped to zero.\n",
+        "\n",
+        "### Dropout\n",
+        "During training, when dropout is applied to a layer, some percentage of its neurons (a hyperparameter, with common values being between 20 and 50%) are randomly deactivated or “dropped out,” along with their connections. Which neurons are dropped out are constantly shuffled randomly during training.  This forces the network to learn a more balanced representation, and helps with overfitting.\n",
+        "\n",
+        "<img src=\"https://ml4a.github.io/images/figures/dropout.png\" width=\"500px\">"
+     ]
     },
     {
       "metadata": {
@@ -481,8 +486,13 @@
       },
       "cell_type": "code",
       "source": [
+        "# Model filename\n",
+        "model_filename = 'mlps-model-definition.h5'\n",
+        "\n",
+        "model_file = os.path.join('input', model_filename)\n",
+        "\n",
         "# Export model into HDF5 file.\n",
-        "model.save('input/mlps-model-definition.h5')\n",
+        "model.save(model_file)\n",
         "\n",
         "!ls -la input"
       ],
@@ -529,7 +539,7 @@
       "source": [
         "from google.colab import files\n",
         "# Download file\n",
-        "files.download('input/mlps-model-definition.h5')"
+        "files.download(model_file)"
       ],
       "execution_count": 0,
       "outputs": []
